<resources>
    <string name="app_name">Lab4</string>
    <string name="save_team_infos">Save Team Infos</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="localisation">Team Address (ZipCode)</string>
    <string name="localisation_edit_">(Please enter zip code)</string>
    <string name="team_name_edit">Team Name</string>
    <string name="team_name">Soccer Team Manager</string>
    <string name="team_personne_name">(Please enter a team name)</string>
    <string name="profile">Profile</string>
    <string name="load_button">LOAD FROM PHONE</string>
    <string name="select_avatar">Select a new Avatar</string>
    <string name="avatar0">Avatar 0</string>
    <string name="avatar1">Avatar 1</string>
    <string name="avatar2">Avatar 2</string>
    <string name="avatar3">Avatar 3</string>
    <string name="avatar4">Avatar 4</string>
    <string name="avatar5">Avatar 5</string>

</resources>