<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="88dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/select_avatar"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:rowCount="2">

            <ImageView
                android:id="@+id/teamId01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar0"
                android:onClick="setTeamIcon"
                app:layout_column="0"
                app:layout_columnSpan="1"
                app:layout_row="0"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_01" />

            <ImageView
                android:id="@+id/teamId02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar1"
                android:onClick="setTeamIcon"
                app:layout_column="1"
                app:layout_columnSpan="1"
                app:layout_row="0"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_02" />

            <ImageView
                android:id="@+id/teamId03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar2"
                android:onClick="setTeamIcon"
                app:layout_column="2"
                app:layout_columnSpan="1"
                app:layout_row="0"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_03" />

            <ImageView
                android:id="@+id/teamId04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar3"
                android:onClick="setTeamIcon"
                app:layout_column="0"
                app:layout_columnSpan="1"
                app:layout_row="1"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_04" />

            <ImageView
                android:id="@+id/teamId05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar4"
                android:onClick="setTeamIcon"
                app:layout_column="1"
                app:layout_columnSpan="1"
                app:layout_row="1"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_05" />

            <ImageView
                android:id="@+id/teamId00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar5"
                android:onClick="setTeamIcon"
                app:layout_column="2"
                app:layout_columnSpan="1"
                app:layout_row="1"
                app:layout_rowSpan="1"
                app:srcCompat="@drawable/ic_logo_00" />

        </androidx.gridlayout.widget.GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>