<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/currentAvatar"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile"
        android:cropToPadding="true"
        android:onClick="OnSetAvatarButton"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/teamName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_01" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/newTeamName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAvatar" />

    <EditText
        android:id="@+id/newTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="58dp"
        android:hint="@string/team_personne_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#494747"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamNameSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamName" />

    <EditText
        android:id="@+id/newTeamLocalisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="58dp"
        android:hint="@string/localisation_edit_"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#494747"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamZipCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameSubmit" />

    <TextView
        android:id="@+id/teamZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="168dp"
        android:text="@string/localisation"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTeamLocalisation" />

    <TextView
        android:id="@+id/teamNameSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="156dp"
        android:text="@string/team_name_edit"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTeamName" />

    <Button
        android:id="@+id/teamAdresseField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="120dp"
        android:background="@color/white"
        android:hint="@string/open_in_google_maps"
        android:onClick="OnOpenInGoogleMaps"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamZipCode" />

    <Button
        android:id="@+id/saveTeamInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:hint="@string/save_team_infos"
        android:onClick="OnSetTeamInfos"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamAdresseField" />

</androidx.constraintlayout.widget.ConstraintLayout>